--- a/app/server/views/beta.jade
+++ b/app/server/views/beta.jade
@@ -5,12 +5,12 @@ block content
 
 	div(style='position: absolute; top: 30%; left: 0; width: 100%;')
 		div(style='width: 300px; height: 300px; margin: 0 auto 0 auto;')
-			a(href='./Revisions-0.5.73.dmg', name='osx', title='Download Revisions MacOSX')
-				img.rollover(src='./img/osx-off.png', alt='Download Revisions MacOSX')
-			img(style='margin-top: 15px;', src='./img/win-off.png', alt='Windows Coming Soon')
+			a(href='/app/Revisions-0.5.73.dmg', name='osx', title='Download Revisions MacOSX')
+				img.rollover(src='/img/osx-off.png', alt='Download Revisions MacOSX')
+			img(style='margin-top: 15px;', src='/img/win-off.png', alt='Windows Coming Soon')
 
 block scripts
-	script(src='vendor/jquery.min.js')
+	script(src='/vendor/jquery.min.js')
 	script
 		$(document).ready(function() {
 			$("img.rollover").hover(
