--- a/app/public/css/styles.css
+++ b/app/public/css/styles.css
@@ -81,26 +81,7 @@ a:hover {
   color: #888;
   text-decoration: none;
 }
-/* SIGNUP FORM */
-#signup .indicates-requiredtext-align:right; font-size:11px; margin-right:4%;,
-#signup .asterisk2 {
-  color: #c60;
-  font-size: 200%;
-}
-#signup .asterisk {
-  color: #c60;
-  font-size: 200%;
-  right: 25px;
-  font-size: 30px;
-  display: block;
-  position: absolute;
-}
-#a1 .asterisk {
-  top: 206px;
-}
-#a2 .asterisk {
-  top: 247px;
-}
+/* DOWNLOAD */
 #signup {
   float: left;
   width: 243px;
@@ -112,6 +93,7 @@ a:hover {
   text-shadow: #444 1px 1px 0px;
   font-size: 12px;
   border-radius: 3px;
+  line-height: 2em;
   -moz-border-radius: 3px;
   background-color: transparent;
   background-color: #3d6983;
@@ -119,26 +101,18 @@ a:hover {
   background-repeat-x: no-repeat;
   background-repeat-y: no-repeat;
 }
-#signup .form-input input {
-  background: #fff;
-  height: 35px;
-  width: 234px;
-  margin: 0 0 8px 0;
-  padding: 0 0 0 10px;
-  color: #494949;
-  border: 0;
-  float: left;
-  border-radius: 3px;
-  -moz-border-radius: 3px;
+#signup h1 {
+  margin-top: 65px;
+}
+#signup p {
+  padding-top: 10px;
 }
 #signup .button {
-  float: right;
   background-color: #3e6885;
   border: 0 none;
   border-radius: 4px;
   color: #fff;
   cursor: pointer;
-  display: inline-block;
   font-size: 15px;
   font-weight: bold;
   height: 32px;
@@ -149,10 +123,11 @@ a:hover {
   text-decoration: none;
   vertical-align: top;
   white-space: nowrap;
-  width: auto;
+  width: 230px;
+  height: 40px;
   position: absolute;
-  left: 160px;
-  bottom: 20px;
+  left: 20px;
+  bottom: 80px;
 }
 #signup .button:hover {
   background-color: #538bb1;
