--- a/app/public/css/styles.styl
+++ b/app/public/css/styles.styl
@@ -77,26 +77,8 @@ a:hover
 	color:#888888
 	text-decoration none
 
-/* SIGNUP FORM */
-
-#signup .indicates-requiredtext-align:right; font-size:11px; margin-right:4%;
-#signup .asterisk2
-	color:#c60;
-	font-size:200%;
-
-#signup .asterisk 
-	color:#c60;
-	font-size:200%;
-	right:25px;
-	font-size:30px;
-	display: block; 
-	position:absolute;
-
-#a1 .asterisk
-	top:206px
-#a2 .asterisk
-	top:247px
-
+/* DOWNLOAD */
+	
 #signup
 	float:left;
 	width:243px;
@@ -108,45 +90,36 @@ a:hover
 	text-shadow: #444 1px 1px 0px;
 	font-size: 12px;
 	border-radius: 3px;
+	line-height: 2em;
 	-moz-border-radius: 3px;
 	background-color: transparent;
 	background-color: #3D6983;
 	background-image: url('../index/form-bkgd.png');
 	background-repeat-x: no-repeat;background-repeat-y: no-repeat;
-
-#signup .form-input input
-	background: white;
-	height: 35px;
-	width: 234px;
-	margin: 0 0 8px 0;
-	padding: 0 0 0 10px;
-	color: #494949;
-	border: 0;
-	float:left;
-	border-radius: 3px;
-	-moz-border-radius: 3px;
-
-#signup .button
-	float:right;
-	background-color: #3e6885;
-	border: 0 none; 
-	border-radius:4px; 
-	color: #FFFFFF; 
-	cursor: pointer; 
-	display: inline-block; 
-	font-size: 15px; 
-	font-weight: bold; 
-	height: 32px; 
-	line-height: 32px;
-	margin: 10px 0 0 0; 
-	padding: 0 22px; 
-	text-align: center; 
-	text-decoration: none; 
-	vertical-align: top; 
-	white-space: nowrap; 
-	width: auto;
-	position:absolute;
-	left:160px; bottom:20px;
+	h1
+		margin-top 65px
+	p
+		padding-top 10px
+	.button
+		background-color: #3e6885;
+		border: 0 none; 
+		border-radius:4px; 
+		color: #FFFFFF; 
+		cursor: pointer;
+		font-size: 15px; 
+		font-weight: bold; 
+		height: 32px; 
+		line-height: 32px;
+		margin: 10px 0 0 0; 
+		padding: 0 22px; 
+		text-align: center; 
+		text-decoration: none; 
+		vertical-align: top; 
+		white-space: nowrap; 
+		width: 230px;
+		height: 40px;
+		position:absolute;
+		left:20px; bottom:80px;
 
 #signup .button:hover 
 	background-color:#538bb1
