--- a/app/server/views/index.jade
+++ b/app/server/views/index.jade
@@ -12,7 +12,7 @@ block content
 			p
 				| Revisions is now available to the public however is still very much beta software.
 				br
-				| That is there are probably bugs and other anomolies so if you discover any problems 
+				| That is there are probably bugs and other anomalies so if you discover any problems 
 				a(href='mailto:stephen@quietless.com') please let me know.
 			div
 				input.button(type='button', value='Download', onclick="location.href='/beta/Revisions-0.5.81.dmg'")
