/help email changed

--- a/app/server/views/help.jade
+++ b/app/server/views/help.jade
@@ -45,7 +45,7 @@ block content
 					li.q
 						| I found a bug, have a problem, am generally unhappy or have other woes, how do I contact you?
 					li.a
-						a(href='mailto:stephen@braitsch.io') stephen@braitsch.io
+						a(href='mailto:stephen@quietless.com') stephen@quietless.com
 					li.q How do I uninstall Revisions?
 					li.a
 						| Until we get around to writing an actual uninstaller, just delete the following files from your computer:
