--- a/app/public/css/styles.css
+++ b/app/public/css/styles.css
@@ -54,6 +54,9 @@ body {
   padding: 5px;
   border: 1px solid #d2d4d6;
   background-color: #fff;
+  -webkit-box-sizing: content-box;
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
 }
 #details {
   padding: 10px;
@@ -100,6 +103,9 @@ a:hover {
   background-image: url("../index/form-bkgd.png");
   background-repeat-x: no-repeat;
   background-repeat-y: no-repeat;
+  -webkit-box-sizing: content-box;
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
 }
 #signup h1 {
   margin-top: 65px;
@@ -207,45 +213,32 @@ a.next span {
   clear: both;
 }
 /* HELP & ISSUES */
-#help,
-#issues {
+#help {
   text-align: left;
-  font-size: 10px;
-  padding: 20px;
+  padding-left: 20px;
 }
-#help li.q,
-#issues li.q {
-  padding-bottom: 2px;
-}
-#help li.a,
-#issues li.a {
-  color: #555;
-  padding-bottom: 15px;
+#help li.a {
+  color: #577492;
+  padding-bottom: 10px;
   list-style-type: none;
 }
-#help li.i,
-#issues li.i {
-  padding-bottom: 15px;
+#help li.i {
+  padding-bottom: 10px;
 }
-#help .sub-list,
-#issues .sub-list {
+#help .sub-list {
   list-style-type: circle;
   padding-top: 5px;
 }
-#help .sub-list li,
-#issues .sub-list li {
+#help .sub-list li {
   margin-bottom: 2px;
 }
-#help a:link,
-#issues a:link {
+#help a:link {
   color: #555;
 }
-#help a:visited,
-#issues a:visited {
+#help a:visited {
   color: #555;
 }
-#help a:hover,
-#issues a:hover {
+#help a:hover {
   color: #555;
   text-decoration: none;
 }
