--- a/app/public/css/styles.styl
+++ b/app/public/css/styles.styl
@@ -52,6 +52,9 @@ body
 	padding:5px;
 	border: 1px solid #D2D4D6;
 	background-color:#ffffff;
+	-webkit-box-sizing: content-box;
+	-moz-box-sizing: content-box;
+	box-sizing: content-box;
 
 #details
 	padding: 10px;
@@ -96,6 +99,9 @@ a:hover
 	background-color: #3D6983;
 	background-image: url('../index/form-bkgd.png');
 	background-repeat-x: no-repeat;background-repeat-y: no-repeat;
+	-webkit-box-sizing: content-box;
+	-moz-box-sizing: content-box;
+	box-sizing: content-box;
 	h1
 		margin-top 65px
 	p
@@ -198,18 +204,15 @@ a.prev span, a.next span
 
 /* HELP & ISSUES */
 
-#help, #issues
+#help
 	text-align: left;
-	font-size:10px;
-	padding: 20px;
-	li.q
-		padding-bottom:2px;
+	padding-left: 20px;
 	li.a
-		color:#555;
-		padding-bottom:15px;
+		color:#577492
+		padding-bottom:10px;
 		list-style-type: none;
 	li.i
-		padding-bottom:15px;
+		padding-bottom:10px;
 	.sub-list
 		list-style-type: circle;
 		padding-top: 5px;
