--- a/app/server/views/layout.jade
+++ b/app/server/views/layout.jade
@@ -3,7 +3,8 @@ html
 	head
 		title Simple, Powerful Git based Version Control for Everyone
 		meta(name='description', content='Revisions is a fast and easy to use Git client built in Adobe Air.')
-		link(href='css/styles.css', rel='stylesheet', type='text/css')
+		link(href='/vendor/bootstrap.min.css', rel='stylesheet')
+		link(href='/css/styles.css', rel='stylesheet')
 		link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Droid+Serif:regular,italic,bold,bolditalic', type='text/css')
 		link(rel='icon', href='/img/favicon.png', type='image/png')
 		script(type='text/javascript')
