--- a/app/server/views/layout.jade
+++ b/app/server/views/layout.jade
@@ -1,4 +1,4 @@
-!!! 5
+doctype html
 html
 	head
 		title Simple, Powerful Git based Version Control for Everyone
@@ -7,16 +7,6 @@ html
 		link(href='/css/styles.css', rel='stylesheet')
 		link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Droid+Serif:regular,italic,bold,bolditalic', type='text/css')
 		link(rel='icon', href='/img/favicon.png', type='image/png')
-		script(type='text/javascript')
-			var _gaq = _gaq || [];
-			_gaq.push(['_setAccount', 'UA-1890531-10']);
-			_gaq.push(['_setDomainName', 'braitsch.io']);
-			_gaq.push(['_trackPageview']);
-			(function() {
-				var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-				ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-				var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-			})();
 	body
 		block content
 		block scripts
