--- a/app/server/views/index.jade
+++ b/app/server/views/index.jade
@@ -13,9 +13,9 @@ block content
 				| Revisions is now available to the public however is still very much beta software.
 				br
 				| That is there are probably bugs and other anomalies so if you discover any problems 
-				a(href='mailto:stephen@quietless.com') please let me know.
+				a(href='mailto:stephen@braitsch.io') please let me know.
 			div
-				input.button(type='button', value='Download', onclick="location.href='/beta/Revisions-0.5.81.dmg'")
+				input.button(type='button', value='Download', onclick="location.href='https://www.dropbox.com/s/w3l3uvfj4mj2lsz/Revisions-0.5.81.dmg?dl=1'")
 		.image_carousel
 			#foo2
 				img#1(src='./index/carousel-img/revisions-a-quick-intro.jpg', alt='revisions-a-quick-intro')
