requesting third party dependencies over https

--- a/app/server/views/layout.pug
+++ b/app/server/views/layout.pug
@@ -5,7 +5,7 @@ html
 		meta(name='description', content='Revisions is a fast and easy to use Git client built in Adobe Air.')
 		link(href='/vendor/bootstrap.min.css', rel='stylesheet')
 		link(href='/css/styles.css', rel='stylesheet')
-		link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Droid+Serif:regular,italic,bold,bolditalic', type='text/css')
+		link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Droid+Serif:regular,italic,bold,bolditalic', type='text/css')
 		link(rel='icon', href='/img/favicon.png', type='image/png')
 	body
 		block content
