--- a/app/server/views/index.pug
+++ b/app/server/views/index.pug
@@ -6,7 +6,7 @@ block content
 		h2 Simple, Powerful File Versioning & Sharing.
 		#main
 		#video-embed
-			iframe(src='http://player.vimeo.com/video/26176531?title=0&byline=0&portrait=0&color=ffffff', width='660', height='408', frameborder='0')
+			iframe(src='https://player.vimeo.com/video/26176531?title=0&byline=0&portrait=0&color=ffffff', width='660', height='408', frameborder='0')
 		#signup
 			h1 Now Available!
 			p
